--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,19 @@
     <tr><th>
         city names
         <input type="text" name="c1" required>
-        <button type="submit">search</button>
+        <tr><th>    date     <input type="date" id="birthday" name="b1" required>
+
+</th></tr>
+        <tr><th><button type="submit" value="Submit">search</button></th></tr>
+
     </th>
     </tr>
     </form>
+    <tr>
+        {%  if error_message %}
+            <th>{{ error_message }}</th>
+        {% endif %}
+    </tr>
 </table>
 
 <table align="center" border="2">
@@ -23,3 +32,21 @@
 </table>
 {#</table>#}
 {#{{ data }}#}
+
+{##}
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<body>#}
+{##}
+{#<h2>Date Field</h2>#}
+{##}
+{##}
+{#<form action="{% url 'weather_details' %}">#}
+{#  <label for="birthday">Date:</label>#}
+{#  <input type="date" id="birthday" name="b1">#}
+{#  <input type="submit" value="Submit">#}
+{#</form>#}
+
+{##}
+{#</body>#}
+{#</html>#}
